--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,16 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Signika&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap');
 
 body {
-    background-image: url("gradient.jpg");
-    background-color: #FAFFAF;
-    color: #000000;
+    /* background-image: url("gradient.jpg"); */
+    background-color: #2d3436;
+    background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
+    /* background-color: #2F2519; */
+    color: white;
     font-family: Signika, sans-serif;
-    border: 5px solid #FFE98A;
+    border: 10px groove #950101;
     border-radius: 10px;
     }
 
@@ -16,9 +20,10 @@ hr {
     width: 50%;
 }
 
-h1, h2, h3 {
-    color: #3D0000;
-    font-family: Signika, sans-serif;
+h1 {
+  font-size: 48px;
+  font-family: 'Oleo Script', Helvetica, sans-serif;
+
 }
 
 .table_center {
@@ -30,7 +35,19 @@ h1, h2, h3 {
     text-align: center;
 }
 
+.text_align_left {
+  text-align: left;
+}
+
 .photo_resize1 {
     max-height: 200px;
     width: auto;
+}
+
+.multicolrtext {
+  background-image: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
